[gd_scene load_steps=20 format=3 uid="uid://bu5dd0xx188fp"]

[ext_resource type="Script" path="res://Scripts/map.gd" id="1_a80ot"]
[ext_resource type="Texture2D" uid="uid://c67w7grajhvc0" path="res://Assets/BackOfMap.png" id="2_igkeo"]
[ext_resource type="Texture2D" uid="uid://ctpehcl3vlf7f" path="res://Assets/BaseL0.png" id="3_frngw"]
[ext_resource type="Texture2D" uid="uid://bkvxrstcikoi8" path="res://Assets/BaseL1.png" id="4_2ry6m"]
[ext_resource type="Texture2D" uid="uid://b0beltoaks2wj" path="res://Assets/BaseL2.png" id="5_eopbj"]
[ext_resource type="Texture2D" uid="uid://dhgg3tvjfdr7p" path="res://Assets/BaseL3.png" id="6_5gfp5"]
[ext_resource type="Texture2D" uid="uid://dptrv57gbbjy8" path="res://Assets/P1 M 1.png" id="7_8gv1h"]

[sub_resource type="Animation" id="Animation_mh28r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseL0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.499979, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("P1M1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 263)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseL1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.499979, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseL2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.499979, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseL3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.499979, 1)]
}

[sub_resource type="Animation" id="Animation_20vkh"]
resource_name = "map_walk_0"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseL0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-0.499979, 1), Vector2(-0.5, -5), Vector2(-0.499979, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("P1M1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-347, 50), Vector2(-347, 44), Vector2(-347, 50)]
}

[sub_resource type="Animation" id="Animation_cv8gl"]
resource_name = "map_walk_1"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P1M1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-118, -62), Vector2(-118, -68), Vector2(-118, -62)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaseL1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-0.499979, 1), Vector2(-0.5, -5), Vector2(-0.499979, 1)]
}

[sub_resource type="Animation" id="Animation_yetvv"]
resource_name = "map_walk_2"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P1M1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(116, 59), Vector2(116, 56), Vector2(116, 59)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaseL2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-0.499979, 1), Vector2(-0.5, -5), Vector2(-0.499979, 1)]
}

[sub_resource type="Animation" id="Animation_3h04t"]
resource_name = "map_walk_3"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P1M1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(349, -62), Vector2(349, -68), Vector2(349, -62)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaseL3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-0.499979, 1), Vector2(-0.5, -5), Vector2(-0.499979, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1qc1"]
_data = {
"RESET": SubResource("Animation_mh28r"),
"map_walk_0": SubResource("Animation_20vkh"),
"map_walk_1": SubResource("Animation_cv8gl"),
"map_walk_2": SubResource("Animation_yetvv"),
"map_walk_3": SubResource("Animation_3h04t")
}

[sub_resource type="Animation" id="Animation_38vow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseL0:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaseL1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseL2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseL3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_akok4"]
resource_name = "color_modulate0"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseL0:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.541176, 0.819608, 1, 1), Color(1, 0.647059, 0.796078, 1), Color(0.658824, 0.819608, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hbvgm"]
resource_name = "color_modulate1"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseL1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.541176, 0.819608, 1, 1), Color(1, 0.647059, 0.796078, 1), Color(0.541176, 0.819608, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oedoe"]
resource_name = "color_modulate2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseL2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.541176, 0.819608, 1, 1), Color(1, 0.647059, 0.796078, 1), Color(0.541176, 0.819608, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bm0ok"]
resource_name = "color_modulate3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseL3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.541176, 0.819608, 1, 1), Color(1, 0.647059, 0.796078, 1), Color(0.541176, 0.819608, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6hmq"]
_data = {
"RESET": SubResource("Animation_38vow"),
"color_modulate0": SubResource("Animation_akok4"),
"color_modulate1": SubResource("Animation_hbvgm"),
"color_modulate2": SubResource("Animation_oedoe"),
"color_modulate3": SubResource("Animation_bm0ok")
}

[node name="Map" type="Node"]
script = ExtResource("1_a80ot")

[node name="BackOfMap" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.499979, 1)
scale = Vector2(3.64489, 3.7403)
texture = ExtResource("2_igkeo")

[node name="BaseL3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.499979, 1)
scale = Vector2(3.64489, 3.7403)
texture = ExtResource("3_frngw")

[node name="BaseL2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.499979, 1)
scale = Vector2(3.64489, 3.7403)
texture = ExtResource("4_2ry6m")

[node name="BaseL1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.499979, 1)
scale = Vector2(3.64489, 3.7403)
texture = ExtResource("5_eopbj")

[node name="BaseL0" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.499979, 1)
scale = Vector2(3.64489, 3.7403)
texture = ExtResource("6_5gfp5")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.999999, 0.999999)

[node name="P1M1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 263)
scale = Vector2(2, 2)
texture = ExtResource("7_8gv1h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t1qc1")
}
autoplay = "map_walk_0"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t6hmq")
}
autoplay = "color_modulate0"
